# p2p-copy

./: .gitignore  CHANGELOG.md  README.md  install.bat  install.sh  pyproject.toml  setup.py
p2p_copy/: cli.py  encryptor.py  providers.py
